# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ICICONSOLE"
version = "0.4.0"
description = "Command-line Interface tailored to working with Neo4j Knowledge Graph Databses."
readme = "README.md"
authors = [{ name = "Sahil Samar", email = "sahilsamar031@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["Tapis", "CLI", "Agave", "HPC", "Tapis Pods", "TACC", "Neo4j"]
dependencies = [
    "tapipy",
    "py2neo",
    "pandas",
    "datascroller"
]

requires-python = ">=3.10"

[project.optional-dependencies]
dev = []

[project.urls]
Homepage = "https://github.com/AD1616/ICICONSOLE"

[project.entry-points."ICICONSOLE.__main__"]
tomatoes = "ICICONSOLE:__main__"